# SalesSupportApp

./: .gitignore  LICENSE  app.py  data.py  encoder.py  generate_dummy_logos_from_csv.py  main.py  optimizer.py  pyproject.toml  requirements.txt  test.py
db/: companies_archive.csv  companies_archive_rev.csv  companies_query.csv
